# ilqgames

./: CMakeLists.txt
include/ilqgames/examples/: three_player_flat_unicycle_example.h  three_player_unicycle_example.h
include/ilqgames/gui/: top_down_renderer.h
include/ilqgames/solver/: problem.h
python/: ilq_solver.py  requirements.txt  time_2p_pointmass.py  time_3p_unicycle.py
src/: problem.cpp  three_player_flat_unicycle_example.cpp  three_player_unicycle_example.cpp  top_down_renderer.cpp
timing/: CMakeLists.txt  time_2p_pointmass.cpp  time_3p_flat_unicycle.cpp  time_3p_unicycle.cpp
